--- a/test/fixtures/transmission_f_records.yml
+++ b/test/fixtures/transmission_f_records.yml
@@ -1,3 +1,16 @@
+# == Schema Information
+#
+# Table name: transmission_f_records
+#
+#  id                  :integer          not null, primary key
+#  record_type         :string
+#  number_of_a_records :string
+#  zero                :string
+#  blank               :string
+#  created_at          :datetime         not null
+#  updated_at          :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
